<resources>
    <string name="app_name">ShareTime</string>
    <string name="user_name">Amy Potter</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="posts_label">Posts</string>
    <string name="edit_button_label">Edit</string>
    <string name="follow_button_label">Follow</string>
    <string name="unfollow_button_label">Unfollow</string>
    <string name="logout">Logout</string>
    <string name="email">xy.1234@gmx.at</string>
    <string name="password">DoNotUse1234!#-</string>
    <string name="choose_image_label">Click to choose an Image from your Gallery</string>
    <string name="news_label">Go and get yourself some newspaper</string>
</resources>