<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        tools:src="@drawable/amy" />

    <TextView
        android:id="@+id/post_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="999"
        android:textAppearance="@style/fame_nrs_bold"
        app:layout_constraintBottom_toTopOf="@id/posts"
        app:layout_constraintEnd_toEndOf="@id/posts"
        app:layout_constraintStart_toStartOf="@id/posts"
        app:layout_constraintTop_toTopOf="@id/profile_picture" />

    <TextView
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/posts_label"
        android:textAppearance="@style/fame_nrs_label"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintEnd_toStartOf="@id/followers"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/post_nr" />

    <TextView
        android:id="@+id/followers_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1337"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/fame_nrs_bold"
        app:layout_constraintBottom_toTopOf="@id/followers"
        app:layout_constraintEnd_toEndOf="@id/followers"
        app:layout_constraintStart_toStartOf="@id/followers"
        app:layout_constraintTop_toTopOf="@id/profile_picture" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/followers_label"
        android:textAppearance="@style/fame_nrs_label"
        app:layout_constraintEnd_toStartOf="@id/following"
        app:layout_constraintStart_toEndOf="@id/posts"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/followers_nr" />
    <TextView
        android:id="@+id/following_nr"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="42"
        android:textAppearance="@style/fame_nrs_bold"
        app:layout_constraintEnd_toEndOf="@id/following"
        app:layout_constraintStart_toStartOf="@id/following"
        app:layout_constraintBottom_toTopOf="@id/following"
        app:layout_constraintTop_toTopOf="@id/profile_picture" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/following_label"
        android:textAlignment="center"
        android:textAppearance="@style/fame_nrs_label"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/followers"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/following_nr" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edit_button_label"
        app:layout_constraintTop_toTopOf="@id/following"
        app:layout_constraintStart_toEndOf="@id/followers"
        />
    <Button
        android:id="@+id/followButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:text="@string/follow_button_label"
        app:layout_constraintTop_toTopOf="@id/following"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@tools:sample/lorem"
        android:textAppearance="@style/custom_headline"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="15sp"
        android:textColor="@color/text_grey"
        app:layout_constraintBottom_toTopOf="@id/location_icon"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@tools:sample/lorem" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toTopOf="@id/post_list"
        app:layout_constraintEnd_toStartOf="@id/location"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:src="@drawable/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="@id/location_icon"
        app:layout_constraintStart_toEndOf="@id/location_icon"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/location_icon"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/no_posts"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="@id/post_list"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/post_list"
        android:text="No posts - go and add a post" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_icon"
        tools:listitem="@layout/profile_post"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_photo"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="Add a new post"
        app:tint="@color/white"
        android:backgroundTint="@color/primaryColor"
        android:src="@drawable/add_photo"
        app:backgroundTint="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
